--- a/_posts/2025-2-2-测试.md
+++ b/_posts/2025-2-2-测试.md
@@ -5,7 +5,7 @@ subtitle:   手势与变形基础知识笔记
 date:       2016-10-10
 author:     BY
 header-img: img/tag-bg.jpg
-preview-img: img/tag-bg.jpg
+preview-img: img/geek-egret-logo.jpg
 catalog: true
 tags:
     - iOS
