--- a/_posts/2025-2-3-我们的网站成功建站啦.md
+++ b/_posts/2025-2-3-我们的网站成功建站啦.md
@@ -4,7 +4,8 @@ title:      Geek-Egret网站建站
 subtitle:   Github Pages建站流程详解
 date:       2025-2-3
 author:     Leeeezy
-header-img: img\2025-2-3-我们的网站成功建站啦\2025-2-3-header.jpg
+header-img: img/2025-2-3-我们的网站成功建站啦/2025-2-3-header.jpg
+preview-img:
 catalog: true
 tags:
     - 建站
