--- a/_posts/2025-2-3-我们的网站成功建站啦.md
+++ b/_posts/2025-2-3-我们的网站成功建站啦.md
@@ -4,7 +4,7 @@ title:      Geek-Egret网站建站
 subtitle:   Github Pages建站流程详解
 date:       2025-2-3
 author:     Leeeezy
-header-img: img/2025-2-3-我们的网站成功建站啦/2025-2-3-header.jpg
+header-img: _posts/img/2025-2-3-我们的网站成功建站啦/2025-2-3-header.jpg
 preview-img:
 catalog: true
 tags:
@@ -32,7 +32,7 @@ tags:
 - 域名DNS解析
     - 需在域名商处完成DNS解析操作，以本网站域名服务商 <b>GoDaddy</b> 为例进行演示
 
-    ![image_godaddy_0](img/2025-2-3-我们的网站成功建站啦/Snipaste_2025-02-03_14-55-07.png)
+    ![image_godaddy_0](_posts/img/2025-2-3-我们的网站成功建站啦/Snipaste_2025-02-03_14-55-07.png)
 
     - 打开图示界面，选择新增记录，填写以下5个记录
     
@@ -50,11 +50,11 @@ tags:
 
     - 将 `/(root)` 更改为 `/docs` 后再改回 `/(root)` 以此来使能Github Pages，如下图
 
-    ![image_github_0](img/2025-2-3-我们的网站成功建站啦/Snipaste_2025-02-03_15-10-31.png)
+    ![image_github_0](_posts/img/2025-2-3-我们的网站成功建站啦/Snipaste_2025-02-03_15-10-31.png)
 
     - 填入刚刚所购买的域名到下方 <b>Custom domain</b> 处，可先退出，等待DNS传播后勾选 <b>Enforces HTTPS</b>，如下图
 
-    ![image_github_1](img/2025-2-3-我们的网站成功建站啦/Snipaste_2025-02-03_15-14-22.png)
+    ![image_github_1](_posts/img/2025-2-3-我们的网站成功建站啦/Snipaste_2025-02-03_15-14-22.png)
 
     - 上述流程结束后，将可以使用购买的域名进行网页访问
 
