fix some small error

--- a/_posts/2025-2-3-我们的网站成功建站啦.md
+++ b/_posts/2025-2-3-我们的网站成功建站啦.md
@@ -4,7 +4,7 @@ title:      Geek-Egret网站建站
 subtitle:   Github Pages建站流程详解
 date:       2025-2-3
 author:     Leeeezy
-header-img: 2025-2-3-header.jpg
+header-img: img/2025-2-3-header.jpg
 preview-img:
 catalog: true
 tags:
@@ -24,10 +24,12 @@ tags:
 
         - 国外域名商购买域名无需备案 <b>支付方式有限</b>
     - 推荐购买方式
+
         | 域名商 | 国家/地区 | 说明 |
         | :----: | :------: | ---- |
         | <b>GoDaddy | 美国 | 可以使用支付宝，价格较贵，该域名商为本网站域名服务商 | 
         | <b>NameSilo | 美国 | 似乎无法使用支付宝，但是可以使用银联，价格实惠 |
+
         - 由于国内域名商提供备案条件需要租用云服务器达到规定时间，且国内域名无法指向`github.io`，性价比低 <b>不推荐</b>
 - 域名DNS解析
     - 需在域名商处完成DNS解析操作，以本网站域名服务商 <b>GoDaddy</b> 为例进行演示
