fix some small error

--- a/_posts/2025-2-3-我们的网站成功建站啦.md
+++ b/_posts/2025-2-3-我们的网站成功建站啦.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Geek-Egret网站建站
+title:      我们的网站成功建站啦
 subtitle:   Github Pages建站流程详解
 date:       2025-2-3
 author:     Leeeezy
