--- a/_posts/2025-2-3-我们的网站成功建站啦.md
+++ b/_posts/2025-2-3-我们的网站成功建站啦.md
@@ -77,22 +77,22 @@ tags:
     ├─_layouts      布局
     └─_posts        文章
     ```
-    
+
 - 以下列出需要修改的 <b>文件</b> 的说明
 
     | 文件 | 说明 |
     | :-: | -------- |
-    | [_config.yml](../_config.yml) | 网页配置文件 |
-    | [index.html](../index.html) | 主页 HTML 文件 |
-    | [about.html](../about.html) | 关于页面 HTML 文件 |
-    | [tags.html](../tags.html) | 标签页面 HTML 文件 |
+    | _config.yml | 网页配置文件 |
+    | index.html | 主页 HTML 文件 |
+    | about.html | 关于页面 HTML 文件 |
+    | tags.html | 标签页面 HTML 文件 |
 
 - 以下列出需要修改的 <b>图像文件夹/文件</b> 说明
 
     | 文件夹 | 说明 |
     | :-: | -------- |
-    | [pwa/icons](../pwa/icons/) | 网页应用图标（如手机端将网页添加到桌面时的图标） |
-    | [img](../img) | 网页图标 |
+    | pwa/icons | 网页应用图标（如手机端将网页添加到桌面时的图标） |
+    | img | 网页图标 |
 
     - <b>img/ </b>文件说明
 
