--- a/_posts/2025-2-3-我们的网站成功建站啦.md
+++ b/_posts/2025-2-3-我们的网站成功建站啦.md
@@ -131,7 +131,7 @@ tags:
 | :-: | :-: | :-: | :-: |
 | BiliBili | 简书 | 知乎 | Github |
 
-若要添加新的网站链接，请自行去 [<b>_include/footer.html</b>](../_includes/footer.html)和[<b>_layouts/page.html</b>](../_layouts/page.html) 并参照其他网页的添加方式自行添加😁
+若要添加新的网站链接，请自行去 <b>_include/footer.html</b>和<b>_layouts/page.html</b> 并参照其他网页的添加方式自行添加😁
 
 ## 文章编写
 ```markdown
