--- a/_posts/2025-2-3-我们的网站成功建站啦.md
+++ b/_posts/2025-2-3-我们的网站成功建站啦.md
@@ -82,29 +82,29 @@ tags:
 
     | 文件 | 说明 |
     | :-: | -------- |
-    | _config.yml | 网页配置文件 |
-    | index.html | 主页 HTML 文件 |
-    | about.html | 关于页面 HTML 文件 |
-    | tags.html | 标签页面 HTML 文件 |
+    | <b>_config.yml</b> | 网页配置文件 |
+    | <b>index.html</b> | 主页 HTML 文件 |
+    | <b>about.html</b> | 关于页面 HTML 文件 |
+    | <b>tags.html</b> | 标签页面 HTML 文件 |
 
 - 以下列出需要修改的 <b>图像文件夹/文件</b> 说明
 
     | 文件夹 | 说明 |
     | :-: | -------- |
-    | pwa/icons | 网页应用图标（如手机端将网页添加到桌面时的图标） |
-    | img | 网页图标 |
+    | <b>pwa/icons</b> | 网页应用图标（如手机端将网页添加到桌面时的图标） |
+    | <b>img</b> | 网页图标 |
 
     - <b>img/ </b>文件说明
 
     | 文件 | 说明 |
     | :---: | ---- |
-    | avatar.jpg | 用户头像 |
-    | favicon.ico | 网页标签图标 |
-    | apple-touch-icon.png | <b>Apple</b> 网页标签图标 |
-    | 404-bg.jpg | <b>404</b> 图 |
-    | home-header.jpg | 主页 <b>HOME</b> 头图 |
-    | about-header.jpg | 关于 <b>ABOUT</b> 页面头图 |
-    | tag-header.jpg | 标签 <b>TAGS</b> 页面头图 |
+    | <b>avatar.jpg</b> | 用户头像 |
+    | <b>favicon.ico</b> | 网页标签图标 |
+    | <b>apple-touch-icon.png</b> | <b>Apple</b> 网页标签图标 |
+    | <b>404-bg.jpg</b> | <b>404</b> 图 |
+    | <b>home-header.jpg</b> | 主页 <b>HOME</b> 头图 |
+    | <b>about-header.jpg</b> | 关于 <b>ABOUT</b> 页面头图 |
+    | <b>ag-header.jpg</b> | 标签 <b>TAGS</b> 页面头图 |
 
 ## 静态网页工程修改
 - 对于除 `_config.yml` 外的文件的修改，主要更改文件开头的内容
